# mtm-gateway

./: .dockerignore  .env.example  Dockerfile  pyproject.toml
.pebbles/: config.json
src/mtm_gateway/: app.py  config.py  main.py  models.py
src/mtm_gateway/middleware/: identity.py  tier.py
src/mtm_gateway/routes/: devices.py  signals.py  status.py  subscriptions.py  wizards.py
src/mtm_gateway/services/: apple_iap.py  backtest_client.py  fcm.py  laconic_registry.py  lps_transfer.py  solana_rpc.py  spl_instructions.py
tests/e2e/: conftest.py  test_devices.py  test_errors.py  test_health.py  test_receipts.py  test_signals.py  test_subscriptions.py  test_tier.py  test_wizards.py  vm_fixture.py
tests/unit/: test_laconic_registry.py  test_solana_network_config.py
