[project]
name = "mtm-gateway"
version = "0.1.0"
description = "Stateless x402-gated gateway for MTM signal relay"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "firebase-admin>=6.0",
    "solders>=0.21",
    "solana>=0.34",
    "cachetools>=5.3",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "apscheduler>=3.10",
    "cryptography>=42.0",
    "PyJWT>=2.8",
    "x402[fastapi]>=2.2.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "x402[svm]>=2.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mtm_gateway"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.12"
strict = true
